fix: use `FLUX_BASE_URL` in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=meepleverse
 
-FLUXZERO_BASE_URL=ws://localhost:8888
-FLUXZERO_APPLICATION_NAME=Meepleverse
+FLUX_BASE_URL=ws://localhost:8888
+FLUX_APPLICATION_NAME=Meepleverse
 
 psp.url=/psp
 supplier.url=/supplier
