--- a/local/supplier/Dockerfile
+++ b/local/supplier/Dockerfile
@@ -2,4 +2,4 @@ FROM eclipse-temurin:25-jre
 
 COPY supplier.jar /
 
-CMD ["java", "-jar", "/supplier.jar"]
+CMD ["java", "-jar", "/supplier.jar", "-Dmeepleverse.url="]
